--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -16,7 +16,7 @@ jobs:
       uses: actions/checkout@v2
       
     - name: Setup .NET Core
-      uses: actions/setup-dotnet@v1
+      uses: actions/setup-dotnet@v4.0.1
       with:
         dotnet-version: 8.0
       
@@ -24,7 +24,7 @@ jobs:
       run: dotnet publish -p:PublishProfile=FolderProfile
       
     - name: Zip the Build
-      run: zip -r ${{ secrets.ReleaseZipName }} ./bin/publish/
+      run: zip -r Genshin.Downloader ./bin/publish/
       
     - name: Create Release and Upload Release Asset
       uses: softprops/action-gh-release@v1
@@ -36,5 +36,5 @@ jobs:
         draft: false
         prerelease: false
         files: |
-          ${{ secrets.ReleaseZipName }}.zip
+          Genshin.Downloader.zip
           LICENSE 
