--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -21,7 +21,7 @@ jobs:
         dotnet-version: 8.0
       
     - name: Build
-      run: dotnet publish -p:PublishProfile=FolderProfile
+      run: dotnet publish -p:PublishProfile=FolderProfile -p:EnableWindowsTargeting=true
       
     - name: Zip the Build
       run: zip -r Genshin.Downloader ./bin/publish/
