--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -4,7 +4,7 @@ on:
   push:
     # Sequence of patterns matched against refs/tags
     tags:
-      - "*" # Push events to matching v*, i.e. v1.0, v20.15.10
+      - "*-*-*" # Push events to matching v*, i.e. v1.0, v20.15.10
 
 jobs:
   build:
@@ -13,10 +13,10 @@ jobs:
 
     steps:
     - name: Checkout source
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
       
     - name: Setup .NET Core
-      uses: actions/setup-dotnet@v4.0.1
+      uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 8.0
       
@@ -27,14 +27,7 @@ jobs:
       run: zip -r Genshin.Downloader ./bin/publish/
       
     - name: Create Release and Upload Release Asset
-      uses: softprops/action-gh-release@v1
+      uses: softprops/action-gh-release@v2
       if: startsWith(github.ref, 'refs/tags/')
       with:
-        tag_name: ${{ github.ref }}
-        name: Release ${{ github.ref }}
-        # body: TODO New Release.
-        draft: false
-        prerelease: false
-        files: |
-          Genshin.Downloader.zip
-          LICENSE 
+        files: Genshin.Downloader.zip
