--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -26,7 +26,7 @@ jobs:
       run: dotnet publish -p:PublishProfile=FolderProfile -p:EnableWindowsTargeting=true
       
     - name: Zip the Build
-      run: zip -r Genshin.Downloader.zip ./bin/publish/*
+      run: zip -j -r Genshin.Downloader.zip ./bin/publish/
       
     - name: Create Release and Upload Release Asset
       uses: softprops/action-gh-release@v2
