--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -4,12 +4,12 @@ on:
   push:
     # Sequence of patterns matched against refs/tags
     tags:
-      - "*-*-*" # Push events to matching v*, i.e. v1.0, v20.15.10
+      - "*" # Push events to matching v*, i.e. v1.0, v20.15.10
 
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     permissions:
       contents: write
 
@@ -25,11 +25,11 @@ jobs:
     - name: Build
       run: dotnet publish -p:PublishProfile=FolderProfile -p:EnableWindowsTargeting=true
       
-    - name: Zip the Build
-      run: zip -j -r Genshin.Downloader.zip ./bin/publish/
+    - name: 7-Zip the Build
+      run: 7za a Genshin.Downloader.7z ./bin/publish/* -mx=9
       
     - name: Create Release and Upload Release Asset
       uses: softprops/action-gh-release@v2
       if: startsWith(github.ref, 'refs/tags/')
       with:
-        files: Genshin.Downloader.zip
+        files: Genshin.Downloader.7z
