--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -23,13 +23,13 @@ jobs:
         dotnet-version: 8.0
       
     - name: Build
-      run: dotnet publish -p:PublishProfile=FolderProfile -p:EnableWindowsTargeting=true
+      run: dotnet publish -p:PublishProfile=FolderProfile
       
-    - name: 7-Zip the Build
-      run: 7za a Genshin.Downloader.7z ./bin/publish/* -mx=9
+    - name: Zip the Build
+      run: Compress-Archive -Path .\bin\publish\* -DestinationPath Genshin.Downloader.zip 
       
     - name: Create Release and Upload Release Asset
       uses: softprops/action-gh-release@v2
       if: startsWith(github.ref, 'refs/tags/')
       with:
-        files: Genshin.Downloader.7z
+        files: Genshin.Downloader.zip
