--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -2,13 +2,11 @@ name: .NET Core Release
 
 on:
   push:
-    # Sequence of patterns matched against refs/tags
     tags:
-      - "*" # Push events to matching v*, i.e. v1.0, v20.15.10
+      - "*"
 
 jobs:
   build:
-
     runs-on: windows-latest
     permissions:
       contents: write
@@ -26,9 +24,9 @@ jobs:
       run: dotnet publish -p:PublishProfile=FolderProfile
       
     - name: Zip the Build
-      run: Compress-Archive -Path .\bin\publish\* -DestinationPath Genshin.Downloader.zip 
+      run: Compress-Archive -Path .\bin\publish\* -DestinationPath Genshin.Downloader.zip
       
-    - name: Create Release and Upload Release Asset
+    - name: Upload Release Asset
       uses: softprops/action-gh-release@v2
       if: startsWith(github.ref, 'refs/tags/')
       with:
