--- a/Genshin.Downloader.csproj
+++ b/Genshin.Downloader.csproj
@@ -46,11 +46,23 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Helper.Worker.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Helper.Worker.resx</DependentUpon>
+    </Compile>
     <Compile Update="Properties\Settings.Designer.cs">
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Helper.Worker.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Helper.Worker.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
 
   <ItemGroup>
