--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     permissions:
       contents: write
 
@@ -18,13 +18,13 @@ jobs:
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: 8.0
+        dotnet-version: 8.0.7
       
     - name: Build
-      run: dotnet publish -p:PublishProfile=FolderProfile
+      run: dotnet publish -p:PublishProfile=FolderProfile -p:EnableWindowsTargeting=true
       
     - name: Zip the Build
-      run: Compress-Archive -Path .\bin\publish\* -DestinationPath Genshin.Downloader.zip
+      run: zip -j -r Genshin.Downloader.zip ./bin/publish/
       
     - name: Upload Release Asset
       uses: softprops/action-gh-release@v2
